# hlv

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.ai-factory/: ARCHITECTURE.md
.github/workflows/: lint.yml  release.yml  test.yml
docs/: ARCH.md  MCP.md  ROADMAP.md  SPECS.md  STRUCTURE.md  TODO.md  WORKFLOW.md  design.pen
docs/site/: index.html  script.js  styles.css
docs/specs/: SPEC_DASHBOARD.md  SPEC_HANDOFF.md
schema/: adversarial-guardrails-schema.json  constraint-schema.json  contract-schema.json  equivalence-policy-schema.json  gates-policy-schema.json  glossary-schema.json  ir-policy-schema.json  llm-map-schema.json  milestones-schema.json  performance-constraints-schema.json  project-schema.json  security-constraints-schema.json  signatures-schema.json  traceability-policy-schema.json  traceability-schema.json  waivers-schema.json
skills/artifacts/: SKILL.md
skills/generate/: SKILL.md
skills/hlv-artifacts/: SKILL.md
skills/hlv-generate/: SKILL.md
skills/hlv-implement/: SKILL.md
skills/hlv-questions/: SKILL.md
skills/hlv-validate/: SKILL.md
skills/hlv-verify/: SKILL.md
skills/implement/: SKILL.md
skills/questions/: SKILL.md
skills/validate/: SKILL.md
skills/verify/: SKILL.md
src/: lib.rs  main.rs
src/check/: artifacts.rs  code_trace.rs  index.rs  (+12 more)
tests/: adopt_tests.rs  artifacts_tests.rs  check_tests.rs  constraints_tests.rs  diagnostics_features.rs  gates_tests.rs  git_policy_tests.rs  index_tests.rs  mcp_tests.rs  milestone_tests.rs  model_parse.rs  schema_validate.rs  task_tests.rs  update_tests.rs
(+146 files in other folders)
